--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="container">
+    <div class="position-relative position-form">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <h1 class="title-page">Login</h1>
+            <form [formGroup]="form" (ngSubmit)="login()">
+                <div class="mb-3">
+                  <label class="form-label">Login usuário</label>
+                  <input formControlName="nickname" type="text" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Senha</label>
+                  <input formControlName="senha" type="password" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                    <div class="form-text">Ainda não tem conta?</div>
+                    <a class="form-text " routerLink="/auth/registrar">Criar conta</a>
+                </div>
+                <button [disabled]="form.invalid!" type="submit" class="btn btn-primary button-style">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
