--- a/src/app/auth/registrar/registrar.component.html
+++ b/src/app/auth/registrar/registrar.component.html
@@ -1,1 +1,34 @@
-<p>registrar works!</p>
+<div class="container">
+    <div class="position-relative position-form">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <h1 class="title-page">Criar Conta</h1>
+            <form>
+                <div class="mb-3">
+                  <label class="form-label">Nome usuário</label>
+                  <input type="text" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Nick usuário</label>
+                    <input type="text" class="form-control input-style">
+                  </div>
+                <div class="mb-3">
+                  <label class="form-label">Senha</label>
+                  <input type="password" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">CPF</label>
+                    <input type="text" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Data de Nascimento</label>
+                    <input type="date" class="form-control input-style">
+                </div>
+                <div class="mb-3">
+                    <div class="form-text">Já possui conta?</div>
+                    <a class="form-text " routerLink="/auth/login">Entrar aqui!</a>
+                </div>
+                <button type="submit" class="btn btn-primary button-style">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
