insert de usuarios e melhorias front

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,7 +15,7 @@
                     <div class="form-text">Ainda não tem conta?</div>
                     <a class="form-text " routerLink="/auth/registrar">Criar conta</a>
                 </div>
-                <button [disabled]="form.invalid!" type="submit" class="btn btn-primary button-style">Submit</button>
+                <button [disabled]="form.invalid!" type="submit" class="btn btn-primary button-style">Entrar</button>
             </form>
         </div>
     </div>
