--- a/src/app/protected/menu/menu.component.html
+++ b/src/app/protected/menu/menu.component.html
@@ -1,1 +1,26 @@
-<p>menu works!aaaaaaaaaaaaaaaaaaaaaaa</p>
+<nav class="navbar navbar-expand-lg navbar-color navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">SGC</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cadastro de clientes</a>
+          </li>
+          <li class="nav-item dropdown nav-posi">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{usuario.nome}}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a (click)="logout()" class="dropdown-item a-color" href="#">Sair</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
