--- a/src/app/protected/menu/menu.component.html
+++ b/src/app/protected/menu/menu.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Cadastro de clientes</a>
+            <a class="nav-link" routerLink="/dashboard/cadastro">Cadastro de clientes</a>
           </li>
           <li class="nav-item dropdown nav-posi">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
