insert telefones e usuarios

--- a/src/app/auth/registrar/registrar.component.html
+++ b/src/app/auth/registrar/registrar.component.html
@@ -27,7 +27,7 @@
                     <div class="form-text">Já possui conta?</div>
                     <a class="form-text " routerLink="/auth/login">Entrar aqui!</a>
                 </div>
-                <button [disabled]="form.invalid!" type="submit" class="btn btn-primary button-style">Criar conta</button>
+                <button [disabled]="form.invalid!" type="submit" class="btn btn-primary button-style">Criar usuário</button>
             </form>
         </div>
     </div>
